--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+#jim{
+    transition: .5s ease-in-out;
+}
+#jim:hover{
+    transform: scale(1.05);
+}
