--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,32 @@
 <div class="row">
-    <div class="col-6">
-
+    <div class="col-3" style="background-color: rgb(39, 21, 56);">
+        <div class="col-3 mt-0 w-100" style="background-color: rgb(50, 28, 71);">
+            <div class="list-group border-0 w-100 fs-5 text-center " role="group">
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-user me-2"></i>View Profile</button>
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-sack-dollar me-2"></i>Balance Enquiry</button>
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-money-bill-transfer me-2"></i>Money Transfer</button>
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-table-list me-2"></i>Account Statement</button>
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-person-walking-arrow-right  me-2"></i>Log
+                    Out</button>
+                <button id="jim" style="background-color: rgb(59, 24, 92); color: aliceblue;" type="button"
+                    class="btn btn-primary"> <i class="fa-solid fa-person-circle-minus me-2"></i>Delete Account</button>
+            </div>
+        </div>
     </div>
-    <div class="col-6" style="background-color: rgb(252, 252, 253);">
-        <h1 style="color: rgb(65, 34, 93);">Enjoy Net Banking with <span class="text-warning">SBI</span></h1>
-        <p class="text-start w-75 container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ipsam voluptate est voluptatem reiciendis quia velit deleniti nemo voluptas esse, ullam corporis assumenda aut fugit quam</p>
-        <img class="w-100 mt-5 p-5"
-         src="https://i.postimg.cc/4N0pn5Vg/Bank-Exams.jpg" alt="">
+            
 
-    </div>
-</div>
+            <div class="col-9 mt-3 text-center p-5" style="background-color: rgb(252, 252, 253);">
+                <h1 style="color: rgb(65, 34, 93); " class="mt-3 mb-5">Enjoy Net Banking with <span
+                        class="text-warning">SBI</span></h1>
+                <p class="text-start w-75 container">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Praesentium ipsam voluptate est voluptatem reiciendis quia velit deleniti nemo voluptas esse, ullam
+                    corporis assumenda aut fugit quam</p>
+                <img class="w-100 mt-5 p-5" src="https://i.postimg.cc/4N0pn5Vg/Bank-Exams.jpg" alt="">
+
+            </div>
+        </div>
